Update links in forecast file

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         This project was coded by
         <a href="https://github.com/hhuynh-15" target="_blank">Helene Huynh</a>
         and is open-sourced on
-        <a href="https://github.com/hhuynh-15" target="_blank">Github</a> and
-        hosted on <a>Netlify</a>.
+        <a href="https://github.com/hhuynh-15/vanilla-weather-forecast" target="_blank">Github</a> and
+        hosted on <a href="https://app.netlify.com/teams/hhuynh-15/sites">Netlify</a>.
       </footer>
     </div>
     <script>
