--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
       </main>
       <footer>
         This project was coded by
-        <a href="https://github.com/hhuynh-15" target="_blank">Helene Huynh</a>
+        <a href="https://vanilla-live-forecast.netlify.app/" target="_blank">Helene Huynh</a>
         and is open-sourced on
         <a href="https://github.com/hhuynh-15/vanilla-weather-forecast" target="_blank">Github</a> and
-        hosted on <a href="https://app.netlify.com/teams/hhuynh-15/sites">Netlify</a>.
+        hosted on <a href="https://app.netlify.com/teams/hhuynh-15/sites" target="_blank">Netlify</a>.
       </footer>
     </div>
     <script>
